--- a/res/layout/friend_message_frame_main.xml
+++ b/res/layout/friend_message_frame_main.xml
@@ -8,17 +8,17 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp" 
-        android:background="#000000">
+        android:layout_height="50dp"
+        android:background="#000000" >
 
         <ImageView
             android:id="@+id/friend_message_frame_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:contentDescription="@drawable/ic_launcher"
             android:layout_marginLeft="@dimen/activity_horizontal_margin"
             android:layout_marginStart="@dimen/activity_horizontal_margin"
+            android:contentDescription="@drawable/ic_launcher"
             android:src="@drawable/yo_hey_back_image" />
 
         <TextView
@@ -27,11 +27,11 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="3dp"
             android:layout_marginStart="3dp"
-            android:layout_toRightOf="@+id/friend_message_frame_back"
             android:layout_toEndOf="@+id/friend_message_frame_back"
-            android:text="消息" 
+            android:layout_toRightOf="@+id/friend_message_frame_back"
+            android:text="消息"
             android:textColor="#ffffff"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/friend_message_name"
@@ -40,66 +40,71 @@
             android:layout_centerInParent="true"
             android:text="赵日天"
             android:textColor="#ffffff"
-            android:textSize="17sp"/>
+            android:textSize="17sp" />
 
         <ImageView
             android:id="@+id/friend_message_frame_person"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
-            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:src="@drawable/main_shou_ye_wo_not_select" 
-            android:contentDescription="@drawable/main_shou_ye_wo_not_select"/>
+            android:layout_marginEnd="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:contentDescription="@drawable/main_shou_ye_wo_not_select"
+            android:src="@drawable/main_shou_ye_wo_not_select" />
     </RelativeLayout>
 
     <ListView
         android:id="@+id/friend_message_frame_listview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"
-        android:divider="@null"/>
+        android:layout_marginTop="16dp"
+        android:layout_weight="1"
+        android:divider="@null" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp" 
+        android:layout_height="50dp"
         android:background="#000000"
-        android:orientation="horizontal">
-        <ImageView 
+        android:orientation="horizontal" >
+
+        <ImageView
             android:layout_width="30dp"
             android:layout_height="match_parent"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
-            android:src="@drawable/yo_hey_iconfont_huatong"
-            android:contentDescription="@drawable/yo_hey_iconfont_huatong"/>
-        <EditText 
+            android:contentDescription="@drawable/yo_hey_iconfont_huatong"
+            android:src="@drawable/yo_hey_iconfont_huatong" />
+
+        <EditText
             android:layout_width="0dp"
             android:layout_height="30dp"
-            android:layout_weight="1"
             android:layout_marginLeft="5dp"
             android:layout_marginStart="5dp"
-            android:cursorVisible="false"
-            android:background="@drawable/et_bg"/>
-        <ImageView 
+            android:layout_weight="1"
+            android:background="@drawable/shape_share_end"
+            android:cursorVisible="false" />
+
+        <ImageView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
-            android:src="@drawable/yo_hey_smiling_face"
-            android:contentDescription="@drawable/yo_hey_smiling_face"/>
-        <TextView 
+            android:contentDescription="@drawable/yo_hey_smiling_face"
+            android:src="@drawable/yo_hey_smiling_face" />
+
+        <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:gravity="center"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:gravity="center"
             android:text="发送"
             android:textColor="#ffffff"
-            android:textSize="15sp"/>
+            android:textSize="15sp" />
     </LinearLayout>
+
 </LinearLayout>
