--- a/res/layout/actvity_yue_lu_personal_post.xml
+++ b/res/layout/actvity_yue_lu_personal_post.xml
@@ -22,20 +22,58 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:background="@drawable/rounded_gray_line_on_a_white_background"
-        android:orientation="horizontal"
-        android:padding="5dp" >
+        android:orientation="vertical" >
 
-        <EditText
-            android:id="@+id/personal_post_edit_say"
-            android:layout_width="fill_parent"
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-           android:background="@null"
-            android:hint="@string/say"
-            android:textSize="12sp" />
+            android:layout_marginBottom="10dp"
+            android:layout_marginLeft="10dp"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:layout_width="17dp"
+                android:layout_height="17dp"
+                android:contentDescription="@drawable/ait_icon"
+                android:src="@drawable/ait_icon" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:background="@color/black"
+            android:orientation="horizontal"
+            android:padding="10dp" >
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:background="@drawable/shape_share_end"
+                android:gravity="center_vertical"
+                android:orientation="horizontal" >
+
+                <EditText
+                    android:id="@+id/personal_post_edit_say"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@null"
+                    android:hint="@string/say"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:paddingStart="5dp"
+                    android:textColor="@color/main_text"
+                    android:textSize="12sp" />
+
+                <ImageView
+                    android:id="@+id/personal_post_image_send"
+                    android:layout_width="27dp"
+                    android:layout_height="27dp"
+                    android:contentDescription="@drawable/send_comments"
+                    android:padding="5dp"
+                    android:src="@drawable/send_comments" />
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
