--- a/res/layout/list_head_personal_post.xml
+++ b/res/layout/list_head_personal_post.xml
@@ -96,6 +96,7 @@
         android:layout_width="fill_parent"
         android:layout_height="25dp"
         android:layout_marginTop="10dp"
+        android:gravity="center_vertical"
         android:orientation="horizontal"
         android:paddingLeft="10dp"
         android:paddingRight="10dp" >
@@ -128,12 +129,12 @@
         <!-- 留言图标 -->
 
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
-            android:contentDescription="@drawable/iconfont_xinxi"
-            android:src="@drawable/iconfont_xinxi" />
+            android:contentDescription="@drawable/comments_grey"
+            android:src="@drawable/comments_grey" />
 
         <TextView
             android:id="@+id/personal_post_text_message"
@@ -148,12 +149,12 @@
         <!-- 点赞图标 -->
 
         <ImageView
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
-            android:contentDescription="@drawable/iconfont_dianzan"
-            android:src="@drawable/iconfont_dianzan" />
+            android:contentDescription="@drawable/like_point_grey"
+            android:src="@drawable/like_point_grey" />
 
         <TextView
             android:id="@+id/personal_post_text_zhan"
