--- a/res/layout/list_dynamic.xml
+++ b/res/layout/list_dynamic.xml
@@ -108,15 +108,15 @@
 
         <ImageView
             android:id="@+id/list_dynamic_image_share_it"
-            android:layout_width="20dp"
-            android:layout_height="20dp"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="53dp"
             android:layout_marginRight="53dp"
-            android:contentDescription="@drawable/iconfont_zhuanfa"
-            android:src="@drawable/iconfont_zhuanfa" />
+            android:contentDescription="@drawable/forwarding_gray"
+            android:src="@drawable/forwarding_gray" />
 
         <!-- 留言 -->
 
@@ -130,10 +130,10 @@
 
             <ImageView
                 android:id="@+id/list_dynamic_image_leave_a_message"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:contentDescription="@drawable/iconfont_xinxi"
-                android:src="@drawable/iconfont_xinxi" />
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:contentDescription="@drawable/comments_grey"
+                android:src="@drawable/comments_grey" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -153,7 +153,6 @@
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-           
             android:layout_marginEnd="53dp"
             android:layout_marginLeft="90dp"
             android:layout_marginRight="53dp"
@@ -162,10 +161,10 @@
 
             <ImageView
                 android:id="@+id/list_dynamic_image_like"
-                android:layout_width="20dp"
-                android:layout_height="20dp"
-                android:contentDescription="@drawable/iconfont_dianzan"
-                android:src="@drawable/iconfont_dianzan" />
+                android:layout_width="15dp"
+                android:layout_height="15dp"
+                android:contentDescription="@drawable/like_point_grey"
+                android:src="@drawable/like_point_grey" />
 
             <TextView
                 android:layout_width="wrap_content"
