--- a/res/layout/list_head_view.xml
+++ b/res/layout/list_head_view.xml
@@ -325,4 +325,14 @@
             android:textSize="16sp" />
     </LinearLayout>
 
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1px"
+        android:layout_marginEnd="30dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginRight="30dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="3dp"
+        android:background="@color/thread_gray" />
+
 </LinearLayout>
