--- a/res/layout/lu.xml
+++ b/res/layout/lu.xml
@@ -61,6 +61,7 @@
         </RadioGroup>
 
         <TextView
+            android:id="@+id/rb_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
