--- a/res/layout/lu.xml
+++ b/res/layout/lu.xml
@@ -27,13 +27,14 @@
             android:layout_centerInParent="true"
             android:background="@drawable/friend_message_shape"
             android:orientation="horizontal"
-            android:padding="2dp" >
+            android:padding="1dp">
 
             <RadioButton
                 android:id="@+id/rb_msg"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:checked="true"
                 android:background="@drawable/selector_lu"
                 android:button="@null"
                 android:gravity="center"
@@ -49,7 +50,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:background="@drawable/selector_lu"
+                android:background="@drawable/selector_lu1"
                 android:button="@null"
                 android:gravity="center"
                 android:paddingBottom="5dp"
