--- a/res/drawable/friend_message_shape.xml
+++ b/res/drawable/friend_message_shape.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <!-- 圆角 -->
-    <corners android:radius="5dp"/>
+    <corners 
+        android:radius="10dip"/>
     <!-- 线条 -->
-    <stroke android:width="1px"/>
+    <stroke android:width="1dp" android:color="#E9F83C"/>
     <!-- 背景 -->
     <solid android:color="#E9F83C"/>
 
