--- a/res/drawable/selector_lu_down1.xml
+++ b/res/drawable/selector_lu_down1.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <solid
-        android:color="#E9F83C"/>
+    <solid android:color="#343434"/>
     <corners 
-        android:topLeftRadius="10dip"
-        android:bottomLeftRadius="10dip"/>
+        android:topRightRadius="10dip"
+        android:bottomRightRadius="10dip"/>
+
 </shape>
