动态页面的转发与分享跳转

--- a/res/layout/activity_yue_lu_forwarding.xml
+++ b/res/layout/activity_yue_lu_forwarding.xml
@@ -78,9 +78,9 @@
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
         android:button="@null"
-        android:drawableLeft="@drawable/tick_box"
+        android:drawableLeft="@drawable/selector_chack_box_kuang"
         android:drawablePadding="5dp"
-        android:drawableStart="@drawable/tick_box"
+        android:drawableStart="@drawable/selector_chack_box_kuang"
         android:padding="0dp"
         android:text="同时评论"
         android:textColor="@color/main_title_text"
