--- a/res/layout/list_head_personal_post.xml
+++ b/res/layout/list_head_personal_post.xml
@@ -2,13 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F3F4F6"
     android:focusable="true"
     android:orientation="vertical" >
 
     <View
         android:layout_width="fill_parent"
-        android:layout_height="10dp"
-        android:background="@color/thread_gray" />
+        android:layout_height="10dp" />
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -75,8 +75,8 @@
         android:layout_width="fill_parent"
         android:layout_height="0.5px"
         android:layout_marginLeft="14dp"
-        android:layout_marginRight="14dp"
-        android:background="@color/line" />
+        android:layout_marginStart="14dp"
+        android:background="#F1F1F1" />
     <!-- 发表内容 -->
 
     <LinearLayout
@@ -90,7 +90,7 @@
     <View
         android:layout_width="fill_parent"
         android:layout_height="10dp"
-        android:background="@color/thread_gray" />
+        android:background="#DADBDD" />
 
     <LinearLayout
         android:layout_width="fill_parent"
