--- a/res/layout/list_thumb_up_view.xml
+++ b/res/layout/list_thumb_up_view.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/write"
+    android:background="#F3F4F6"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     android:padding="10dp" >
