新增 Friends 和 Share 功能未实现

--- a/res/layout/list_head_personal_post.xml
+++ b/res/layout/list_head_personal_post.xml
@@ -60,6 +60,7 @@
         <!-- 添加按钮 -->
 
         <ImageView
+            android:id="@+id/add_friend"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
