--- a/res/drawable/shape_rounded_yellow.xml
+++ b/res/drawable/shape_rounded_yellow.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
 
-    <stroke
-        android:width="1px"
-        android:color="#E5E6E6" />
-<solid android:color="@color/write"/>
+    <stroke android:width="1sp" />
+
+    <corners android:radius="10px" />
+
+    <solid android:color="#E9F83D" />
+
 </shape>
