--- a/res/layout/activity_yue_lu_share_it.xml
+++ b/res/layout/activity_yue_lu_share_it.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#F3F4F6"
     android:orientation="vertical" >
 
     <include
@@ -11,8 +12,10 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/button_rounded_corners_and_solid"
+        android:background="@color/write"
         android:orientation="vertical" >
+
+        <!-- 分享内容 -->
 
         <EditText
             android:id="@+id/share_it_edit_ider"
@@ -21,32 +24,174 @@
             android:background="@null"
             android:gravity="top"
             android:hint="@string/idea"
-            android:padding="5dp"
-            android:textSize="12sp" />
+            android:paddingLeft="10dp"
+            android:paddingRight="10dp"
+            android:paddingTop="5dp"
+            android:textSize="11sp" />
+        <!-- 添加图片 -->
 
-        <TextView
-            android:id="@+id/share_it_text_position"
+        <RelativeLayout
+            android:id="@+id/share_it_relation_add"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:padding="10dp"
-            android:text="@string/position" />
+            android:layout_height="wrap_content" >
+
+            <RelativeLayout
+                android:id="@+id/share_it_view_add"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginStart="10dp"
+                android:background="@drawable/text_stroke" >
+
+                <View
+                    android:layout_width="1px"
+                    android:layout_height="20dp"
+                    android:layout_centerInParent="true"
+                    android:background="#D2D4D4" />
+
+                <View
+                    android:layout_width="20dp"
+                    android:layout_height="1px"
+                    android:layout_centerInParent="true"
+                    android:background="#D2D4D4" />
+            </RelativeLayout>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_toEndOf="@id/share_it_view_add"
+                android:layout_toRightOf="@id/share_it_view_add"
+                android:text="@string/add_picture"
+                android:textColor="@color/main_text"
+                android:textSize="12sp" />
+        </RelativeLayout>
+
+        <View
+            android:layout_width="fill_parent"
+            android:layout_height="1px"
+            android:layout_marginTop="10dp"
+            android:background="#D9DBDC" />
+        <!-- 所在位置 -->
+
+        <LinearLayout
+            android:id="@+id/share_it_linear_position"
+            android:layout_width="fill_parent"
+            android:layout_height="40dp"
+            android:background="@color/write"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:layout_width="19dp"
+                android:layout_height="19dp"
+                android:layout_marginEnd="7dp"
+                android:layout_marginLeft="11dp"
+                android:layout_marginRight="7dp"
+                android:layout_marginStart="11dp"
+                android:contentDescription="@drawable/display_position"
+                android:src="@drawable/display_position" />
+
+            <TextView
+                android:id="@+id/share_it_text_position"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/position"
+                android:textColor="@color/main_text"
+                android:textSize="13sp" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:contentDescription="@drawable/right_arrow_icon"
+                android:src="@drawable/right_arrow_icon" />
+        </LinearLayout>
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/share_it_text_who"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/button_rounded_corners_and_solid"
-        android:padding="10dp"
-        android:text="@string/who_can_see" />
+    <!-- 谁可以看 -->
 
-    <TextView
-        android:id="@+id/share_it_text_remind"
+    <LinearLayout
+        android:id="@+id/share_it_linear_who"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/button_rounded_corners_and_solid"
-        android:padding="10dp"
-        android:text="@string/see_who_remind" />
+        android:layout_height="40dp"
+        android:layout_marginTop="10dp"
+        android:background="@color/write"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:layout_width="19dp"
+            android:layout_height="19dp"
+            android:layout_marginEnd="7dp"
+            android:layout_marginLeft="11dp"
+            android:layout_marginRight="7dp"
+            android:layout_marginStart="11dp"
+            android:contentDescription="@drawable/globe"
+            android:src="@drawable/globe" />
+
+        <TextView
+            android:id="@+id/share_it_text_who"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/who_can_see"
+            android:textColor="@color/main_text"
+            android:textSize="13sp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:contentDescription="@drawable/right_arrow_icon"
+            android:src="@drawable/right_arrow_icon" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="fill_parent"
+        android:layout_height="1px"
+        android:background="#D9DBDC" />
+    <!-- 提醒谁看 -->
+
+    <LinearLayout
+        android:id="@+id/share_it_linear_remind"
+        android:layout_width="fill_parent"
+        android:layout_height="40dp"
+        android:background="@color/write"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
+
+        <ImageView
+            android:layout_width="18dp"
+            android:layout_height="17dp"
+            android:layout_marginEnd="7dp"
+            android:layout_marginLeft="11dp"
+            android:layout_marginRight="7dp"
+            android:layout_marginStart="11dp"
+            android:contentDescription="@drawable/ait_gray_icon"
+            android:src="@drawable/ait_gray_icon" />
+
+        <TextView
+            android:id="@+id/share_it_text_remind"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/see_who_remind"
+            android:textColor="@color/main_text"
+            android:textSize="13sp" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:contentDescription="@drawable/right_arrow_icon"
+            android:src="@drawable/right_arrow_icon" />
+    </LinearLayout>
 
 </LinearLayout>
