--- a/res/layout/title_navigation_bar.xml
+++ b/res/layout/title_navigation_bar.xml
@@ -23,11 +23,14 @@
         android:id="@+id/title_navigation_back_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:paddingBottom="@dimen/activity_navigation_bar_paddingtop"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_navigation_bar_paddingtop"
         android:text="取消"
+        android:textColor="@color/write"
+        android:textSize="12sp"
         android:visibility="gone" />
 
     <LinearLayout
