--- a/res/layout/lu.xml
+++ b/res/layout/lu.xml
@@ -90,7 +90,7 @@
             android:gravity="center"
             android:hint="搜索"
             android:textColor="#888888"
-            android:textSize="15dp" />
+            android:textSize="15sp" />
 
         <ImageView
             android:layout_width="15dp"
@@ -102,12 +102,21 @@
             android:src="@drawable/yo_hey_searchet" />
     </RelativeLayout>
 
-    <LinearLayout
-        android:id="@+id/linearlayout"
+    <ListView 
+        android:id="@+id/listview"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:orientation="vertical" >
-    </LinearLayout>
-
+        android:layout_height="match_parent"
+        android:layout_marginTop="17dp"
+        android:divider="@null"
+        android:dividerHeight="5dp"/>
+    <ExpandableListView
+        android:id="@+id/expand"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="17dp"
+        android:visibility="gone"
+        android:divider="@null"
+        android:dividerHeight="5dp"
+        android:groupIndicator="@null" >
+    </ExpandableListView>
 </LinearLayout>
