--- a/res/layout/child.xml
+++ b/res/layout/child.xml
@@ -6,6 +6,7 @@
     android:orientation="horizontal" >
 
     <ImageView
+        android:id="@+id/tv_childHeadImage"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_marginLeft="21dp"
