--- a/res/layout/list_view_who_child_view.xml
+++ b/res/layout/list_view_who_child_view.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:focusable="true"
     android:orientation="vertical" >
 
     <RelativeLayout
@@ -32,15 +33,15 @@
             android:textColor="#888888"
             android:textSize="12sp" />
 
-        <ImageView
+        <CheckBox
             android:id="@+id/list_child_who_can_see_check_box"
             android:layout_width="19dp"
             android:layout_height="19dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/unselected_round"
-            android:contentDescription="@drawable/unselected_round"
+            android:background="@drawable/selector_round_tick"
+            android:button="@null"
             android:padding="10dp" />
     </RelativeLayout>
 
